docs(java-core): add handbook rule to reflection-and-annotation notes